Implement resource loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,28 @@ cmake_minimum_required(VERSION 3.10)
 
 project(zoo)
 
-add_executable(${PROJECT_NAME} main.c)
+set(CMAKE_CXX_STANDARD 20)
+
+file(GLOB_RECURSE SRC src/*.cpp)
+
+add_executable(${PROJECT_NAME} ${SRC})
 
 include(FindPkgConfig)
 pkg_search_module(SDL2 REQUIRED sdl2)
+pkg_search_module(SDL2_IMAGE REQUIRED SDL2_image)
+pkg_search_module(SDL2_MIXER REQUIRED SDL2_mixer)
 pkg_search_module(ZIP REQUIRED libzip)
-pkg_search_module(STB REQUIRED stb)
+
+target_include_directories(${PROJECT_NAME} PRIVATE
+    ${SDL2_INCLUDE_DIRS}
+    ${SDL2_IMAGE_INCLUDE_DIRS}
+    ${SDL2_MIXER_INCLUDE_DIRS}
+    ${ZIP_INCLUDE_DIRS}
+)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
-  ${ZIP_LIBRARIES}
-  ${SDL2_LIBRARIES}
-  m
+    ${SDL2_LIBRARIES}
+    ${SDL2_IMAGE_LIBRARIES}
+    ${SDL2_MIXER_LIBRARIES}
+    ${ZIP_LIBRARIES}
 )
