Do not include libzstd in libzip library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ set(LIBZIP_DO_INSTALL OFF CACHE INTERNAL "" FORCE)
 set(SHARED_LIB_VERSIONNING OFF CACHE INTERNAL "" FORCE)
 set(ENABLE_BZIP2 OFF CACHE INTERNAL "" FORCE)
 set(ENABLE_LZMA OFF CACHE INTERNAL "" FORCE)
+set(ENABLE_ZSTD OFF CACHE INTERNAL "" FORCE)
 add_subdirectory(vendor/libzip)
 
 target_include_directories(${PROJECT_NAME} PRIVATE
