Make sure variables are set for SDL in CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,28 +20,28 @@ set(SDL2_DISABLE_INSTALL ON CACHE INTERNAL "" FORCE)
 set(SDL_TEST OFF CACHE INTERNAL "" FORCE)
 add_subdirectory(vendor/SDL)
 
-set(SDL2IMAGE_SAMPLES OFF)
-set(SDL2IMAGE_AVIF OFF)
-set(SDL2IMAGE_BMP ON)
-set(SDL2IMAGE_GIF OFF)
-set(SDL2IMAGE_JPG OFF)
-set(SDL2IMAGE_JXL OFF)
-set(SDL2IMAGE_LBM OFF)
-set(SDL2IMAGE_PCX OFF)
-set(SDL2IMAGE_PNG OFF)
-set(SDL2IMAGE_PNM OFF)
-set(SDL2IMAGE_QOI OFF)
-set(SDL2IMAGE_SVG OFF)
-set(SDL2IMAGE_TGA ON)
-set(SDL2IMAGE_TIF OFF)
-set(SDL2IMAGE_WEBP OFF)
-set(SDL2IMAGE_XCF OFF)
-set(SDL2IMAGE_XPM OFF)
-set(SDL2IMAGE_XV OFF)
-set(SDL2IMAGE_DEPS_SHARED OFF)
-set(SDL2IMAGE_VENDORED OFF)
-set(SDL2IMAGE_BACKEND_IMAGEIO OFF)
-set(SDL2IMAGE_BACKEND_STB OFF)
+set(SDL2IMAGE_SAMPLES OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_AVIF OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_BMP ON CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_GIF OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_JPG OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_JXL OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_LBM OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_PCX OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_PNG OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_PNM OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_QOI OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_SVG OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_TGA ON CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_TIF OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_WEBP OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_XCF OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_XPM OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_XV OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_DEPS_SHARED OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_VENDORED ON CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_BACKEND_IMAGEIO OFF CACHE INTERNAL "" FORCE)
+set(SDL2IMAGE_BACKEND_STB OFF CACHE INTERNAL "" FORCE)
 add_subdirectory(vendor/SDL_image)
 
 set(SDL2MIXER_DEPS_SHARED OFF CACHE INTERNAL "" FORCE)
@@ -59,18 +59,11 @@ set(SDL2MIXER_MP3_MINIMP3 OFF CACHE INTERNAL "" FORCE)
 set(SDL2MIXER_WAVE ON CACHE INTERNAL "" FORCE)
 add_subdirectory(vendor/SDL_mixer)
 
-set(SDL2TTF_BUILD_SHARED_LIBS OFF)
-set(SDL2TTF_VENDORED ON)
-set(SDL2TTF_SAMPLES OFF)
-set(SDL2TTF_FREETYPE ON)
-set(SDL2TTF_FREETYPE_VENDORED ON)
-set(SDL2TTF_HARFBUZZ OFF)
-set(SDL2TTF_HARFBUZZ_VENDORED OFF)
-set(SDL2TTF_SAMPLES OFF)
-set(SDL2TTF_SAMPLES OFF)
-set(SDL2TTF_SAMPLES OFF)
-set(SDL2TTF_SAMPLES OFF)
-set(SDL2TTF_SAMPLES OFF)
+set(SDL2TTF_BUILD_SHARED_LIBS OFF CACHE INTERNAL "" FORCE)
+set(SDL2TTF_VENDORED ON CACHE INTERNAL "" FORCE)
+set(SDL2TTF_SAMPLES OFF CACHE INTERNAL "" FORCE)
+set(SDL2TTF_FREETYPE ON CACHE INTERNAL "" FORCE)
+set(SDL2TTF_HARFBUZZ OFF CACHE INTERNAL "" FORCE)
 add_subdirectory(vendor/SDL_ttf)
 
 set(ENABLE_COMMONCRYPTO OFF CACHE INTERNAL "" FORCE)
